--- a/src/components/shared/PrevAndNext/index.module.css
+++ b/src/components/shared/PrevAndNext/index.module.css
@@ -12,12 +12,19 @@
   background-color: white;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 0.8rem 1rem;
+  padding: 0.5rem 1rem;
+  display: grid;
+  place-items: center;
   font-weight: bold;
   font-size: 1.2rem;
   color: #000;
   text-decoration: none;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.15s ease-in-out;
+}
+
+.prevAndNextButton:hover {
+  background-color: #f5f5f5;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .disabled {
